--- a/app/src/main/res/layout/item_device.xml
+++ b/app/src/main/res/layout/item_device.xml
@@ -13,7 +13,8 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
