Update for uuid

--- a/app/src/main/res/layout/content_connect.xml
+++ b/app/src/main/res/layout/content_connect.xml
@@ -50,20 +50,31 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <TextView
         android:id="@+id/data"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
-        android:textSize="15sp"
         android:text="Data is none"
+        android:textSize="15sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_device_name"
         app:layout_constraintVertical_bias="0" />
+
+    <Button
+        android:id="@+id/write"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="write"
+        app:layout_constraintBaseline_toBaselineOf="@+id/data"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/data" />
 
     <ExpandableListView
         android:id="@+id/gatt_services_list"
@@ -72,6 +83,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/data"
+        app:layout_constraintTop_toBottomOf="@+id/write"
         app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
