add BleAdmin scan part

--- a/app/src/main/res/layout/content_discover.xml
+++ b/app/src/main/res/layout/content_discover.xml
@@ -7,19 +7,27 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.sirius.botasky.bledemo.DiscoverActivity"
     tools:showIn="@layout/activity_discover">
-
+    <Button
+        android:id="@+id/stop_scan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="stop Scan"
+        app:layout_constraintLeft_toRightOf="@+id/start_scan"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
     <Button
         android:id="@+id/start_scan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="SCAN"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/stop_scan"
         app:layout_constraintTop_toTopOf="parent" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/device_list"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         app:layout_constraintLeft_toLeftOf="parent"
