--- a/app/src/main/res/layout/content_connect.xml
+++ b/app/src/main/res/layout/content_connect.xml
@@ -5,6 +5,7 @@
     android:id="@+id/connect_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:visibility="gone"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.sirius.botasky.bledemo.ConnectActivity"
     tools:showIn="@layout/activity_connect">
@@ -52,7 +53,7 @@
         android:text="write"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintleft_toRightOf="@+id/write_data" />
+        app:layout_constraintLeft_toRightOf="@+id/write_data" />
 
     <ExpandableListView
         android:id="@+id/gatt_services_list"
