--- a/app/src/main/res/layout/content_connect.xml
+++ b/app/src/main/res/layout/content_connect.xml
@@ -5,7 +5,7 @@
     android:id="@+id/connect_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="gone"
+    android:visibility="visible"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.sirius.botasky.bledemo.ConnectActivity"
     tools:showIn="@layout/activity_connect">
